--- a/index.html
+++ b/index.html
@@ -5,7 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Resize Pictures</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div class="upload-box">
+        <img src="upload-icon.png" alt="upload icon" />
+        <p>Browse File to Upload</p>
+      </div>
+      <div class="content">
+        <div class="row sizes">
+          <div class="column width">
+            <label>Width</label>
+            <input type="number" />
+          </div>
+          <div class="column height">
+            <label>Height</label>
+            <input type="number" />
+          </div>
+        </div>
+        <div class="row checkboxes">
+          <div class="column radio">
+            <input type="checkbox" id="radio" />
+            <label for="radio">Lock aspect radio</label>
+          </div>
+          <div class="column quality">
+            <input type="checkbox" id="quality" />
+            <label for="quality">Reduce quality</label>
+          </div>
+        </div>
+        <button class="download-btn">Download Image</button>
+      </div>
+    </div>
+  </body>
 </html>
