--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
     <title>Resize Pictures</title>
   </head>
   <body>
     <div class="wrapper">
       <div class="upload-box">
+        <input type="file" accept="image/*" hidden />
         <img src="upload-icon.png" alt="upload icon" />
         <p>Browse File to Upload</p>
       </div>
