Showing height and width of an image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="row checkboxes">
           <div class="column radio">
-            <input type="checkbox" id="radio" />
+            <input type="checkbox" id="radio" checked />
             <label for="radio">Lock aspect radio</label>
           </div>
           <div class="column quality">
